# tree-sitter-huff

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_huff/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterHuffTests/: TreeSitterHuffTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
