[package]
name = "tree-sitter-huff"
description = "Simple Tree-Sitter parser for Huff, an EVM low level language."
version = "0.1.0"
authors = ["Gaon3"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "huff"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/gaon3/tree-sitter-huff"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
